@@ -1,6 +1,7 @@
-# $Id: TODO,v 1.4 2008/05/08 17:18:44 tat Exp $
+# $Id: TODO,v 1.5 2008/05/21 12:10:32 tat Exp $
 
 - .conf include_dirs keyword support
+- u_config_t multi-line values
 - externalize SO_REUSEADDR flag
 - man page for each module
 - complete the Net module
