@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.35 2008/05/09 07:58:15 tho Exp $
+$Id: ChangeLog,v 1.36 2008/05/21 12:10:32 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+    - [config] u_config_from_buf and u_config_to_buf addedf
 	- [config] drivers can set a callback function to resolve include filenames
 	- [config] load from opaque data sources (u_config_load_from_drv)
 	- [config] include directive support
